homeassistant/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
      name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassistant
spec:
  hostnames:
  - homeassistant.local.ongy.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: homeassistant
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
